replace some deprecated constructors, Integer and Boolean