@@ -213,7 +213,7 @@ public class TGLayoutVertical extends TGLayout{
 		}
 		
 		protected void addMeasure(int index){
-			this.measures.add(new Integer(index));
+			this.measures.add(Integer.valueOf(index));
 			this.lastIndex = index;
 		}
 	}
